--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 cryptography==2.7
 Flask==1.1.1
 Flask-MySQL==1.5.2
+Flask-MySQLdb==0.2.0
+Flask-SQLAlchemy==2.5.1
+Flask-MySQL==1.5.2
 gunicorn==20.1.0
 mysql-connector-python==8.0.18
 mysqlclient==2.0.3
